better hall of fame

--- a/halloffame.html
+++ b/halloffame.html
@@ -26,14 +26,14 @@
         <section class="hero">
             <div class="hero-content">
                 <h2>🏅 Hall of Fame 🏅</h2>
-                <p>Here we celebrate the amazing solo dev projects that have stood out in our community!</p>
+                <p>Celebrating the amazing solo developers who have showcased their talent in our game jams!</p>
             </div>
         </section>
 
         <section class="features">
             <div class="cards-grid">
                 <div class="card">
-                    <h3>SoloDev Game Jam 5</h3>
+                    <h3>🎉 SoloDevelopment Game Jam 5</h3>
                     <p>Winners:</p>
                     <ul>
                         <li><a href="https://drahmen.itch.io/guardian-of-the-grave" target="_blank">Guardian of the Grave</a> by @drahmen</li>
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="card">
-                    <h3>SoloDev Game Jam 4</h3>
+                    <h3>🎉 SoloDevelopment Game Jam 4</h3>
                     <p>Winners:</p>
                     <ul>
                         <li><a href="https://blackvoidmedia.itch.io/mutual-assured-destruction-simulator" target="_blank">Mutual Assured Destruction Simulator</a> by @blackvoidtytan</li>
@@ -53,12 +53,50 @@
                 </div>
 
                 <div class="card">
-                    <h3>Marathon Winners</h3>
-                    <p>Our long-format champions:</p>
+                    <h3>🏆 Third Marathon Jam</h3>
+                    <p>Winner:</p>
                     <ul>
                         <li><a href="https://blackvoidmedia.itch.io/out-here-alone" target="_blank">Out Here Alone</a> by @blackvoidtytan</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>❄️ Winter Jam</h3>
+                    <p>Winner:</p>
+                    <ul>
+                        <li><a href="https://uppastgamer.itch.io/track-master" target="_blank">Track Master</a> by @ensom_</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>🏆 Second Marathon Jam</h3>
+                    <p>Winner:</p>
+                    <ul>
                         <li><a href="https://fernandolv3.itch.io/scavengersfromplanetx" target="_blank">Scavengers from Planet X</a> by @fernandolv3</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>🎃 Halloween Jam</h3>
+                    <p>Winners:</p>
+                    <ul>
+                        <li><a href="https://blackvoidmedia.itch.io/i-came-home-tonight" target="_blank">I Came Home Tonight</a> by @blackvoidtytan and @radagast08</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>🏆 First Marathon Jam</h3>
+                    <p>Winner:</p>
+                    <ul>
                         <li><a href="https://razzie-dev.itch.io/df-fbla" target="_blank">DF FBLA</a> by @lonelylily</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>🏆 First r/SoloDevelopment Jam</h3>
+                    <p>Winner:</p>
+                    <ul>
+                        <li><a href="https://blackvoidmedia.itch.io/theres-something-wrong-with-this-world" target="_blank">There's Something Wrong With This World</a> by @blackvoidtytan</li>
                     </ul>
                 </div>
             </div>
