better file management

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A community for solo game developers to learn, share, and grow together">
+    <meta name="keywords" content="game development, indie games, solo developer, game jams">
     <title>SoloDevelopment - Home</title>
-    <meta name="description" content="A community for solo game developers to learn, share, and grow together.">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -13,10 +14,10 @@
             <h1 class="site-title">SoloDevelopment.org</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="events.html">Events</a></li>
+                    <li><a href="./">Home</a></li>
+                    <li><a href="events/">Events</a></li>
                     <li><a href="https://discord.gg/4R5bB9nMSV">Discord</a></li>
-                    <li><a href="halloffame.html">Hall of Fame</a></li>
+                    <li><a href="hall-of-fame/">Hall of Fame</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,13 +40,13 @@
                 <div class="card">
                     <h3>Marathon Jams</h3>
                     <p>Test your speed and creativity in our multi-day coding sprints. Show us what you can build under pressure!</p>
-                    <a href="events.html" class="button">View Events</a>
+                    <a href="events/" class="button">View Events</a>
                 </div>
 
                 <div class="card">
                     <h3>Hall of Fame</h3>
                     <p>Check out the top solo dev projects that have blown us away. Could yours be next?</p>
-                    <a href="halloffame.html" class="button">See Winners</a>
+                    <a href="hall-of-fame/" class="button">See Winners</a>
                 </div>
 
                 <div class="card">
@@ -70,8 +71,8 @@
             <div class="footer-section">
                 <h4>Resources</h4>
                 <ul>
-                    <li><a href="events.html">Game Jams</a></li>
-                    <li><a href="halloffame.html">Hall of Fame</a></li>
+                    <li><a href="events/">Game Jams</a></li>
+                    <li><a href="hall-of-fame/">Hall of Fame</a></li>
                     <li><a href="https://github.com/SoloDevelopmentCommunity/SoloDevelopment/wiki">Wiki</a></li>
                 </ul>
             </div>
