--- a/events/index.html
+++ b/events/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SoloDevelopment - Events</title>
-    <meta name="description" content="Game jams and events for solo developers">
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Game jams and events for solo developers - Join our community challenges">
+    <meta name="keywords" content="game jams, game development, indie games, solo developer">
+    <title>Events - SoloDevelopment</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
@@ -13,10 +14,10 @@
             <h1 class="site-title">SoloDevelopment.org</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="events.html">Events</a></li>
+                    <li><a href="../">Home</a></li>
+                    <li><a href="../events/">Events</a></li>
                     <li><a href="https://discord.gg/4R5bB9nMSV">Discord</a></li>
-                    <li><a href="halloffame.html">Hall of Fame</a></li>
+                    <li><a href="../hall-of-fame/">Hall of Fame</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,7 +29,7 @@
                 <h2>Current Jam</h2>
                 <p>Jump into our latest game development challenge:</p>
                 <div class="button-group">
-                    <a href="https://itch.io/jam/solodev-marathon-jam-4" class="button" target="_blank">Join Marathon Jam #4</a>
+                    <a href="https://itch.io/jam/solodev-marathon-jam-4" class="button">Join Marathon Jam #4</a>
                 </div>
             </div>
         </section>
@@ -37,30 +38,29 @@
             <div class="cards-grid">
                 <div class="card">
                     <h3>About Our Jams</h3>
-                    <p>Welcome to SoloDevelopment, a community built by solo developers for solo developers! We provide a space where indie devs can connect, share experiences, and support each other.</p>
-                    <p>We regularly host game jams and encourage developers of all skill levels to participate. Whether you're looking to get feedback or just learn from others, this is the place for you!</p>
+                    <p>Join our vibrant community of solo developers where you can share experiences, get feedback, and grow together. Our game jams cater to all skill levels and provide a supportive environment for learning.</p>
                 </div>
 
                 <div class="card">
                     <h3>Marathon Jams</h3>
-                    <p>Take on the challenge of our month-long development marathons:</p>
+                    <p>Take on our month-long development challenges:</p>
                     <ul>
-                        <li><a href="https://itch.io/jam/marathon-jam-by-solodevelopment" target="_blank">Marathon Jam 1</a></li>
-                        <li><a href="https://itch.io/jam/marathon-jam-2022-by-solodevelopment" target="_blank">Marathon Jam 2</a></li>
-                        <li><a href="https://itch.io/jam/marathon-jam-3-by-solodevelopment" target="_blank">Marathon Jam 3</a></li>
+                        <li><a href="https://itch.io/jam/marathon-jam-by-solodevelopment">Marathon Jam 1</a></li>
+                        <li><a href="https://itch.io/jam/marathon-jam-2022-by-solodevelopment">Marathon Jam 2</a></li>
+                        <li><a href="https://itch.io/jam/marathon-jam-3-by-solodevelopment">Marathon Jam 3</a></li>
                     </ul>
                 </div>
 
                 <div class="card">
                     <h3>72-hour Jams</h3>
-                    <p>Perfect for weekend warriors and rapid prototyping:</p>
+                    <p>Perfect for weekend warriors:</p>
                     <ul>
-                        <li><a href="https://itch.io/jam/winter-jam-by-solodevelopment" target="_blank">Winter Jam</a></li>
-                        <li><a href="https://itch.io/jam/solodevelopment-game-jam" target="_blank">Minimalism Jam</a></li>
-                        <li><a href="https://itch.io/jam/halloween-jam-2021" target="_blank">Halloween Jam 2021</a></li>
-                        <li><a href="https://itch.io/jam/solo-dev-game-jam-4" target="_blank">Solodev Jam #4</a></li>
-                        <li><a href="https://itch.io/jam/solo-dev-game-jam-5-spooky-jam" target="_blank">Solodev Jam #5</a></li>
-                        <li><a href="https://itch.io/jam/solodevelopment-jam-6-winter-jam" target="_blank">Solodev Jam #6</a></li>
+                        <li><a href="https://itch.io/jam/winter-jam-by-solodevelopment">Winter Jam</a></li>
+                        <li><a href="https://itch.io/jam/solodevelopment-game-jam">Minimalism Jam</a></li>
+                        <li><a href="https://itch.io/jam/halloween-jam-2021">Halloween Jam 2021</a></li>
+                        <li><a href="https://itch.io/jam/solo-dev-game-jam-4">Solodev Jam #4</a></li>
+                        <li><a href="https://itch.io/jam/solo-dev-game-jam-5-spooky-jam">Solodev Jam #5</a></li>
+                        <li><a href="https://itch.io/jam/solodevelopment-jam-6-winter-jam">Solodev Jam #6</a></li>
                     </ul>
                 </div>
             </div>
@@ -80,8 +80,8 @@
             <div class="footer-section">
                 <h4>Resources</h4>
                 <ul>
-                    <li><a href="events.html">Game Jams</a></li>
-                    <li><a href="halloffame.html">Hall of Fame</a></li>
+                    <li><a href="../events/">Game Jams</a></li>
+                    <li><a href="../hall-of-fame/">Hall of Fame</a></li>
                     <li><a href="https://github.com/SoloDevelopmentCommunity/SoloDevelopment/wiki">Wiki</a></li>
                 </ul>
             </div>
