better file management

--- a/events/index.html
+++ b/events/index.html
@@ -3,26 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Game jams and events for solo developers - Join our community challenges">
-    <meta name="keywords" content="game jams, game development, indie games, solo developer">
+    <meta name="description" content="Game jams and events for solo developers">
     <title>Events - SoloDevelopment</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
-        <div class="header-content">
-            <h1 class="site-title">SoloDevelopment.org</h1>
-            <nav>
-                <ul>
-                    <li><a href="../">Home</a></li>
-                    <li><a href="../events/">Events</a></li>
-                    <li><a href="https://discord.gg/4R5bB9nMSV">Discord</a></li>
-                    <li><a href="../hall-of-fame/">Hall of Fame</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
+    {% include header.html %}
     <main>
         <section class="hero">
             <div class="hero-content">
@@ -38,12 +24,13 @@
             <div class="cards-grid">
                 <div class="card">
                     <h3>About Our Jams</h3>
-                    <p>Join our vibrant community of solo developers where you can share experiences, get feedback, and grow together. Our game jams cater to all skill levels and provide a supportive environment for learning.</p>
+                    <p>Welcome to SoloDevelopment, a community built by solo developers for solo developers! We provide a space where indie devs can connect, share experiences, and support each other.</p>
+                    <p>We regularly host game jams and encourage developers of all skill levels to participate. Whether you're looking to get feedback or just learn from others, this is the place for you!</p>
                 </div>
 
                 <div class="card">
                     <h3>Marathon Jams</h3>
-                    <p>Take on our month-long development challenges:</p>
+                    <p>Take on the challenge of our month-long development marathons:</p>
                     <ul>
                         <li><a href="https://itch.io/jam/marathon-jam-by-solodevelopment">Marathon Jam 1</a></li>
                         <li><a href="https://itch.io/jam/marathon-jam-2022-by-solodevelopment">Marathon Jam 2</a></li>
@@ -53,7 +40,7 @@
 
                 <div class="card">
                     <h3>72-hour Jams</h3>
-                    <p>Perfect for weekend warriors:</p>
+                    <p>Perfect for weekend warriors and rapid prototyping:</p>
                     <ul>
                         <li><a href="https://itch.io/jam/winter-jam-by-solodevelopment">Winter Jam</a></li>
                         <li><a href="https://itch.io/jam/solodevelopment-game-jam">Minimalism Jam</a></li>
