--- a/hall-of-fame/index.html
+++ b/hall-of-fame/index.html
@@ -3,26 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Celebrating outstanding solo developer projects and game jam winners">
-    <meta name="keywords" content="game development, indie games, solo developer, game jams, winners">
+    <meta name="description" content="Celebrating outstanding solo developer projects">
     <title>Hall of Fame - SoloDevelopment</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
-        <div class="header-content">
-            <h1 class="site-title">SoloDevelopment.org</h1>
-            <nav>
-                <ul>
-                    <li><a href="../">Home</a></li>
-                    <li><a href="../events/">Events</a></li>
-                    <li><a href="https://discord.gg/4R5bB9nMSV">Discord</a></li>
-                    <li><a href="../hall-of-fame/">Hall of Fame</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
+    {% include header.html %}
     <main>
         <section class="hero">
             <div class="hero-content">
@@ -61,7 +47,7 @@
                     </ul>
                 </div>
 
-                <!-- Continue with other cards following the same pattern -->
+                <!-- Continue with other winners -->
             </div>
         </section>
     </main>
