--- a/index.html
+++ b/index.html
@@ -3,26 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A community for solo game developers to learn, share, and grow together">
-    <meta name="keywords" content="game development, indie games, solo developer, game jams">
+    <meta name="description" content="A community for solo game developers">
     <title>SoloDevelopment - Home</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="header-content">
-            <h1 class="site-title">SoloDevelopment.org</h1>
-            <nav>
-                <ul>
-                    <li><a href="./">Home</a></li>
-                    <li><a href="events/">Events</a></li>
-                    <li><a href="https://discord.gg/4R5bB9nMSV">Discord</a></li>
-                    <li><a href="hall-of-fame/">Hall of Fame</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
+    {% include header.html %}
     <main>
         <section class="hero">
             <div class="hero-content">
