--- a/events/index.html
+++ b/events/index.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    {% include header.html %}
+    <header>
+        <div class="header-content">
+            <h1 class="site-title">SoloDevelopment.org</h1>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/events/">Events</a></li>
+                    <li><a href="https://discord.gg/4R5bB9nMSV">Discord</a></li>
+                    <li><a href="/hall-of-fame/">Hall of Fame</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <main>
         <section class="hero">
             <div class="hero-content">
